# BLDC-Motor-Controller-and-Simulator-Software

./: .gitignore  CMakeLists.txt  README.md  TP3Rapport.md  TP4 system test.md  automated_test.md
cmake/: CodeCoverage.cmake
config/: student_identifier_template.json
docs/: CMakeLists.txt
gtk_ui_builder/: CMakeLists.txt  bldc_controller_simulator.gresource.xml  bldc_controller_simulator_window.ui
include/bldc_controller_simulator/: bldc_controller_simulator.h  bldc_controller_simulator_window.h  callbacks.h  custom_typedefs.h  error.h  fault_injector.h  hall_sensors.h  inverter.h  log.h  motor.h  params.h  pid.h  rungeKutta.h  simulation.h  students_code.h  utils.h
lcov_config/: .lcovrc  README-LCOV-CONFIG.md
python/: calculator.py  plot_logs.py
src/: CMakeLists.txt  bldc_controller_simulator.c  bldc_controller_simulator_window.c  callbacks.c  fault_injector.c  hall_sensors.c  inverter.c  log.c  main.c  motor.c  old_main.c  pid.c  rungeKutta.c  simulation.c  students_code.c  utils.c
tests/: CMakeLists.txt  README-COVERAGE.md  README-TESTING.md
tests/include/: FixtureIntegration.hpp  GlobalSetup.hpp
tests/src/: test_integration.cpp  test_main.cpp  test_unit.cpp
